--- a/style.css
+++ b/style.css
@@ -20,6 +20,18 @@ main {
     align-items: center;
 }
 
+.img {
+    background-image: url(https://play-lh.googleusercontent.com/DTzWtkxfnKwFO3ruybY1SKjJQnLYeuK3KmQmwV5OQ3dULr5iXxeEtzBLceultrKTIUTr);
+   
+    
+
+    width: 100%;
+    height: 300px;
+    background-position: center;
+    border-radius: 8px 8px 0 0;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 
 
 .logo {
@@ -54,7 +66,7 @@ section {
 form {
     background: white;
     border-radius: 8px;
-    
+    margin-top: 100px;
 
 
 }
@@ -154,7 +166,7 @@ button:hover {
 
   section {
    margin-left: 25px;
-   margin-bottom: 150px;
+   margin-bottom: 51px;
    max-width: 240px;
    background: transparent;
   }
@@ -165,12 +177,20 @@ button:hover {
     height: 460px;
   }
 
+  .img {
+    width: 100%;
+    height: 220px;
+    background-position: center;
+    border-radius: 8px 8px 0 0;
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
  
-
+ /*
   .logo {
     max-width: 240px;
     height: 200px;
-  }
+  } */
 
     form {
         margin-bottom: 20px;
